typescript/checker/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            191,
        ),
        hi: BytePos(
            200,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:13:11
   |
13 | var ra1 = undefined * a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            216,
        ),
        hi: BytePos(
            225,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:14:11
   |
14 | var ra2 = undefined * b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            241,
        ),
        hi: BytePos(
            250,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:15:11
   |
15 | var ra3 = undefined * 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            266,
        ),
        hi: BytePos(
            275,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:16:11
   |
16 | var ra4 = undefined * E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            297,
        ),
        hi: BytePos(
            306,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:17:15
   |
17 | var ra5 = a * undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            322,
        ),
        hi: BytePos(
            331,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:18:15
   |
18 | var ra6 = b * undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            347,
        ),
        hi: BytePos(
            356,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:19:15
   |
19 | var ra7 = 0 * undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            374,
        ),
        hi: BytePos(
            383,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:20:17
   |
20 | var ra8 = E.b * undefined;
   |                 ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            410,
        ),
        hi: BytePos(
            419,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:23:11
   |
23 | var rb1 = undefined / a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            435,
        ),
        hi: BytePos(
            444,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:24:11
   |
24 | var rb2 = undefined / b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            460,
        ),
        hi: BytePos(
            469,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:25:11
   |
25 | var rb3 = undefined / 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            485,
        ),
        hi: BytePos(
            494,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:26:11
   |
26 | var rb4 = undefined / E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            516,
        ),
        hi: BytePos(
            525,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:27:15
   |
27 | var rb5 = a / undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            541,
        ),
        hi: BytePos(
            550,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:28:15
   |
28 | var rb6 = b / undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            566,
        ),
        hi: BytePos(
            575,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:29:15
   |
29 | var rb7 = 0 / undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            593,
        ),
        hi: BytePos(
            602,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:30:17
   |
30 | var rb8 = E.b / undefined;
   |                 ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            629,
        ),
        hi: BytePos(
            638,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:33:11
   |
33 | var rc1 = undefined % a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            654,
        ),
        hi: BytePos(
            663,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:34:11
   |
34 | var rc2 = undefined % b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            679,
        ),
        hi: BytePos(
            688,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:35:11
   |
35 | var rc3 = undefined % 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            704,
        ),
        hi: BytePos(
            713,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:36:11
   |
36 | var rc4 = undefined % E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            735,
        ),
        hi: BytePos(
            744,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:37:15
   |
37 | var rc5 = a % undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            760,
        ),
        hi: BytePos(
            769,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:38:15
   |
38 | var rc6 = b % undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            785,
        ),
        hi: BytePos(
            794,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:39:15
   |
39 | var rc7 = 0 % undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            812,
        ),
        hi: BytePos(
            821,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:40:17
   |
40 | var rc8 = E.b % undefined;
   |                 ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            848,
        ),
        hi: BytePos(
            857,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:43:11
   |
43 | var rd1 = undefined - a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            873,
        ),
        hi: BytePos(
            882,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:44:11
   |
44 | var rd2 = undefined - b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            898,
        ),
        hi: BytePos(
            907,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:45:11
   |
45 | var rd3 = undefined - 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            923,
        ),
        hi: BytePos(
            932,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:46:11
   |
46 | var rd4 = undefined - E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            954,
        ),
        hi: BytePos(
            963,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:47:15
   |
47 | var rd5 = a - undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            979,
        ),
        hi: BytePos(
            988,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:48:15
   |
48 | var rd6 = b - undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1004,
        ),
        hi: BytePos(
            1013,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:49:15
   |
49 | var rd7 = 0 - undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1031,
        ),
        hi: BytePos(
            1040,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:50:17
   |
50 | var rd8 = E.b - undefined;
   |                 ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1068,
        ),
        hi: BytePos(
            1077,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:53:11
   |
53 | var re1 = undefined << a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1094,
        ),
        hi: BytePos(
            1103,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:54:11
   |
54 | var re2 = undefined << b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1120,
        ),
        hi: BytePos(
            1129,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:55:11
   |
55 | var re3 = undefined << 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1146,
        ),
        hi: BytePos(
            1155,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:56:11
   |
56 | var re4 = undefined << E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1179,
        ),
        hi: BytePos(
            1188,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:57:16
   |
57 | var re5 = a << undefined;
   |                ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1205,
        ),
        hi: BytePos(
            1214,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:58:16
   |
58 | var re6 = b << undefined;
   |                ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1231,
        ),
        hi: BytePos(
            1240,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:59:16
   |
59 | var re7 = 0 << undefined;
   |                ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1259,
        ),
        hi: BytePos(
            1268,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:60:18
   |
60 | var re8 = E.b << undefined;
   |                  ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1296,
        ),
        hi: BytePos(
            1305,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:63:11
   |
63 | var rf1 = undefined >> a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1322,
        ),
        hi: BytePos(
            1331,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:64:11
   |
64 | var rf2 = undefined >> b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1348,
        ),
        hi: BytePos(
            1357,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:65:11
   |
65 | var rf3 = undefined >> 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1374,
        ),
        hi: BytePos(
            1383,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:66:11
   |
66 | var rf4 = undefined >> E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1407,
        ),
        hi: BytePos(
            1416,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:67:16
   |
67 | var rf5 = a >> undefined;
   |                ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1433,
        ),
        hi: BytePos(
            1442,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:68:16
   |
68 | var rf6 = b >> undefined;
   |                ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1459,
        ),
        hi: BytePos(
            1468,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:69:16
   |
69 | var rf7 = 0 >> undefined;
   |                ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1487,
        ),
        hi: BytePos(
            1496,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:70:18
   |
70 | var rf8 = E.b >> undefined;
   |                  ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1525,
        ),
        hi: BytePos(
            1534,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:73:11
   |
73 | var rg1 = undefined >>> a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1552,
        ),
        hi: BytePos(
            1561,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:74:11
   |
74 | var rg2 = undefined >>> b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1579,
        ),
        hi: BytePos(
            1588,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:75:11
   |
75 | var rg3 = undefined >>> 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1606,
        ),
        hi: BytePos(
            1615,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:76:11
   |
76 | var rg4 = undefined >>> E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1641,
        ),
        hi: BytePos(
            1650,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:77:17
   |
77 | var rg5 = a >>> undefined;
   |                 ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1668,
        ),
        hi: BytePos(
            1677,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:78:17
   |
78 | var rg6 = b >>> undefined;
   |                 ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1695,
        ),
        hi: BytePos(
            1704,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:79:17
   |
79 | var rg7 = 0 >>> undefined;
   |                 ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1724,
        ),
        hi: BytePos(
            1733,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:80:19
   |
80 | var rg8 = E.b >>> undefined;
   |                   ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1760,
        ),
        hi: BytePos(
            1769,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:83:11
   |
83 | var rh1 = undefined & a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1785,
        ),
        hi: BytePos(
            1794,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:84:11
   |
84 | var rh2 = undefined & b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1810,
        ),
        hi: BytePos(
            1819,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:85:11
   |
85 | var rh3 = undefined & 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1835,
        ),
        hi: BytePos(
            1844,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:86:11
   |
86 | var rh4 = undefined & E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1866,
        ),
        hi: BytePos(
            1875,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:87:15
   |
87 | var rh5 = a & undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1891,
        ),
        hi: BytePos(
            1900,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:88:15
   |
88 | var rh6 = b & undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1916,
        ),
        hi: BytePos(
            1925,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:89:15
   |
89 | var rh7 = 0 & undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1943,
        ),
        hi: BytePos(
            1952,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:90:17
   |
90 | var rh8 = E.b & undefined;
   |                 ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1979,
        ),
        hi: BytePos(
            1988,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:93:11
   |
93 | var ri1 = undefined ^ a;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2004,
        ),
        hi: BytePos(
            2013,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:94:11
   |
94 | var ri2 = undefined ^ b;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2029,
        ),
        hi: BytePos(
            2038,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:95:11
   |
95 | var ri3 = undefined ^ 1;
   |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2054,
        ),
        hi: BytePos(
            2063,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:96:11
   |
96 | var ri4 = undefined ^ E.a;
   |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2085,
        ),
        hi: BytePos(
            2094,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:97:15
   |
97 | var ri5 = a ^ undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2110,
        ),
        hi: BytePos(
            2119,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:98:15
   |
98 | var ri6 = b ^ undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2135,
        ),
        hi: BytePos(
            2144,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:99:15
   |
99 | var ri7 = 0 ^ undefined;
   |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2162,
        ),
        hi: BytePos(
            2171,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:100:17
    |
100 | var ri8 = E.b ^ undefined;
    |                 ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2198,
        ),
        hi: BytePos(
            2207,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:103:11
    |
103 | var rj1 = undefined | a;
    |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2223,
        ),
        hi: BytePos(
            2232,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:104:11
    |
104 | var rj2 = undefined | b;
    |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2248,
        ),
        hi: BytePos(
            2257,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:105:11
    |
105 | var rj3 = undefined | 1;
    |           ^^^^^^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            2273,
        ),
        hi: BytePos(
            2282,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:106:11
    |
106 | var rj4 = undefined | E.a;
    |           ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2304,
        ),
        hi: BytePos(
            2313,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:107:15
    |
107 | var rj5 = a | undefined;
    |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2329,
        ),
        hi: BytePos(
            2338,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:108:15
    |
108 | var rj6 = b | undefined;
    |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2354,
        ),
        hi: BytePos(
            2363,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:109:15
    |
109 | var rj7 = 0 | undefined;
    |               ^^^^^^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            2381,
        ),
        hi: BytePos(
            2390,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithUndefinedValueAndValidOperands.ts:110:17
    |
110 | var rj8 = E.b | undefined;
    |                 ^^^^^^^^^

